<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvShoppingList"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/tvItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvItem"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvShoppingList"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/tvShoppingList"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintItemName"
        android:inputType="text"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/tvStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvStore"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvItem"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/tvItem"
        tools:layout_editor_absoluteY="241dp" />

    <EditText
        android:id="@+id/editStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintStoreName"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuantity"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvItem"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="@+id/tvItem"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/btnDecrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_decrement"
        android:text="@string/btnDecrement"
        android:onClick="btnDecrement"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/btnIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_increment"
        android:text="@string/btnIncrement"
        android:onClick="btnIncrement"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="393dp" />

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hintQuantity"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/btnIncrement"
        app:layout_constraintStart_toEndOf="@+id/btnDecrement"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantity" />

    <Button
        android:id="@+id/btnSubmitEdit"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:text="@string/btnSubmitEdit"
        android:onClick="btnSubmitEdit"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="585dp" />
</androidx.constraintlayout.widget.ConstraintLayout>